DOCS-1101: Fix several elements to be mobile friendly - Update header to avoid horizontal scroll on mobile/small screens - Update Docs Categories table to use common css elements, have visual indicator which page is active, make images smaller, and resize properly for mobile devices. - Remove vector image attributions (commercial account is finalized)

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -37,7 +37,6 @@
         width: 100%;
     }
 
-
     .navbar-brand {
         font-size: 0rem;
         .nav-link {
@@ -86,12 +85,13 @@
             font-size: .875rem;
 
             .nav-link {
-                padding-right: .25rem;
+                padding-right: 0;
                 padding-left: 0;
             }
 
             .navbar-nav {
                 padding-bottom: 2rem;
+                font-size: 82%;
                 overflow-x: auto;
                 white-space: nowrap;
                 -webkit-overflow-scrolling: touch;
